@@ -2,8 +2,10 @@ package com.example.bookstore.security;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.example.bookstore.model.User;
@@ -17,7 +19,10 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // Nếu bạn có roles, cần chỉnh sửa phần này
+        if (user.getRole() != null) {
+            return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole()));
+        }
+        return Collections.emptyList();
     }
 
     @Override
